tests/snapshots/snapshot_tests__array_standard_copy4.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "examples/array_standard_copy4.vmt",
    status: Panic,
    used_instantiations: [],
}
