tests/snapshots/snapshot_tests__array_standard_copy4.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_standard_copy4.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int d Z (Read-Int-Int c_next Z)) Z) (Read-Int-Int c_next Z))",
        "(= (Read-Int-Int (Write-Int-Int a Z x) Z) x)",
        "(= (Read-Int-Int (Write-Int-Int a Z x) Z) (Read-Int-Int a Z))",
        "(= (Read-Int-Int (Write-Int-Int c Z (Read-Int-Int Array-Int-Int!val!11 Z)) Z) (Read-Int-Int Array-Int-Int!val!11 Z))",
        "(= (Read-Int-Int (Write-Int-Int c Z (Read-Int-Int Array-Int-Int!val!11 Z)) Z) (Read-Int-Int c Z))",
        "(= (Read-Int-Int (Write-Int-Int d Z (Read-Int-Int c_next Z)) Z) (Read-Int-Int d Z))",
    ],
}
