tests/snapshots/snapshot_tests__array_standard_partition.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "examples/array_standard_partition.vmt",
    status: Panic,
    used_instantiations: [],
}
